<resources>
    <string name="app_name">OpticalFileTransfer</string>
    <string name="upload_mode_switch_text">File upload mode</string>
    <string name="download_mode_switch_text">File download mode</string>
    <string name="action_settings">Settings</string>
    <string name="draw_blink_encourage_new_transmission">Waiting for a new transmission..</string>
    <string name="draw_blink_warning_header_not_detected">Missed start sequence. </string>
    <string name="draw_blink_started_header_detection">Preparing startup..</string>
    <string name="draw_blink_detected_file1">Detected file: </string>
    <string name="draw_blink_detected_file2">Waiting for the data..</string>
    <string name="draw_blink_failed_header_detection">Failed to detect startup phase, please resend..</string>
    <string name="draw_blink_failed_data_detection">File transmission error for : </string>
    <string name="draw_blink_succeeded_data_detection">Correctly saved the file : </string>
    <string name="draw_blink_pending_async">Processing file, wait.. </string>
    <string name="draw_progress_chunk_name">Noise - chunk</string>
    <string name="start_sequence_string">Startup sequence : </string>
    <string name="start_sequence_upload_file_desc">Sending start sequence for a file : </string>
    <string name="upload_file_desc_string">Sending file : </string>
    <string name="ask_for_new_file_selection_to_upload">Select file to upload</string>
    <string name="ask_folder_choose">Select file download location</string>
    <string name="upload_file_finalizing_msg">Finishing file, please wait..</string>
    <string name="menu_string_about">About</string>
    <string name="menu_string_settings">Settings</string>
    <string name="menu_string_privacypolicy">Privacy policy</string>
    <string name="menu_string_help">Help</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="title_choose">Choose</string>
    <string name="title_choose_dict_file">Pick a dictionary</string>
    <string name="dialog_ok">Select</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_choose_folder">Choose a folder</string>
    <string name="title_choose_filetosend">Choose a file to send</string>
    <string name="title_filebrowse">Browse received files</string>
    <string name="dump_folder_descr">Download folder :</string>
    <string name="fileread_failed_descr1">File </string>
    <string name="fileread_failed_descr2"> cannot be read - no read permission perhaps. </string>
    <string name="textfilesaved_toast1">New file : </string>
    <string name="textfilesaved_toast2">saved</string>
    <string name="failed_writability_test1">Cannot write to location </string>
    <string name="failed_writability_test2">, perhaps storage mounted readonly or lack of permission ? Transmission will likely fail. You might also want to restart system.</string>
    <string name="help_donotshowagaintick">Don\'t show again</string>
    <string name="help_title">Help</string>
    <string name="helpd1">Use this app to receive/send small files as the stream of QR frames
        through the phone\'s camera.

        You can generate file QR stream from this app or also the
        desktop PC - see
    Windows and Linux programs for uploading files.</string>
    <string name="helpd2">
        Tips for successfull transmission :
    </string>
    <string name="helpd3">
        1. Keep the camera straight - avoid tilting.
    </string>
    <string name="helpd4">
        2. Make sure camera focus correctly - if not, try waving hand quickly in front of it, or tap the screen
        to request autofocus.
    </string>
    <string name="helpd5">
        3. Keep the highlight green if you can. The more green the highlight gets, the less error is generated, and higher the chance that the
        transmission will succeed. Observe also the noise bar during transmission - avoid getting it fully red
        when the chunk changes.
    </string>
    <string name="helpd6">
        4. Try to capture significant part of the start sequence as well - without it the transmission will not even start.
    </string>
    <string name="info_err_selection">Maximum error (%) : </string>
    <string name="info_qrsize_selection">QR size (bytes) : </string>
    <string name="info_qrsize_selection2">bytes</string>
    <string name="info_start_seq_time">Start sequence time (s) : </string>
    <string name="resulting_upload_speed">Max. upload speed : </string>
    <string name="info_button_restore_default_settings">Restore default settings</string>
    <string name="chceck_blurshader">Preview blur effect</string>
    <string name="defaultButtonMinus">-</string>
    <string name="defaultButtonPlus">+</string>
    <string name="text_content_q1">This sets the Frames Per Seconds (FPS) of the generated QR stream,
        that the decoder tries to keep. Lower value gives slower transmission, but makes it easier
        to ever succeed for older phones with slower camera, or under low light
    conditions. For newer ones, you can try with about 20FPS and see if the transmission
    will succeed. </string>
    <string name="text_content_q2">This sets the amount of redundancy that the frame producer will generate.
        With higher value, the transmission is less likely to fail, but the transmission speed will be
    lower as well. If the noise bar during transmission reception is often green for you when the chunk number increases,
        then you
    can afford to lower this value to increase the transfer speed.</string>
    <string name="text_content_q3">This sets the size of each produced QR frame. Bigger value allows to
    obtain faster transmission, although on my phone I had serious trouble to finish transmission when going above
    750.</string>
    <string name="text_content_q4">This sets the time in seconds, that the initializing startup sequence
    is displayed in the frame producer. It is neccssary to capture at least some fragment of this startup
    sequence to allow proper initialization on the receiver end. Bigger value gives the receiver
    more time to position phone camera to capture stream.</string>
    <string name="link_win">"http://wrobel.wroclaw.pl/opticalfiletransfer/en/win/index.html"</string>
    <string name="link_lin">"http://wrobel.wroclaw.pl/opticalfiletransfer/en/lin/index.html"</string>
    <string name="privpolicy_tilte">Privacy Policy</string>
    <string name="privacypolicy1">
        The privacy policy for this app can be found under this link, but it is also presented here below:
        \n\n
        \tThis application does not collect any of your data. It only uses the camera to capture
        the stream of QR frames in order to recreate as a file. So it needs camera system permission and
        both the permission to read and write to the file storage - only to do the file transmission.
        No other usage of files occurs other than to do the transmission.\n\n

        This application also requires permission for system setting write. It only needs to use those system settings permission
        in order to brighten up the screen at the time when file is being transmitted as a stream of QR frames and
        go back to original brightness after it has finished - that lets the receiver camera pick up the image more easily.
        No other system settings other than this brightness manipulation are changed.\n\n


        This app uses the Google\'s advertisement services to display the advertisement banner in its free version.
        It might collect some of your data - see the Google privacy policy to know more.
        In order to use this ad service, this app in its free
        version requires permission for the network - it does not transmits other data through the network other than what
        is needed for the Google\'s advertisement service.
        In the non-free version, the network permissions are
        not necessary, since there is no ads then.


        \n\n

This application contains links to other sites. If you click on a third-party link, you will be directed to that site.
        Note that these external sites are not operated by me.
        Therefore, I strongly advise you to review the Privacy Policy of these websites.
        I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
\n\n
        This application can also request some action from other applications, like opening a file by some external application.
        No information other than query terms are passed to the intent then (like in the case of opening a file or link, only the
        link or file path and mimetype is passed to the external application - nothing else) - so the privacy policy of this external apps
        should be looked up then.

    </string>
    <string name="linkifystr1">Google privacy policy</string>
    <string name="linkifyval1">https://www.google.com/policies/privacy/</string>
    <string name="linkifystr2">under this link</string>
    <string name="linkifyval2">http://wrobel.wroclaw.pl/opticalfiletransfer/en/privacypolicy.html</string>
    <string name="textabout1">

        Optical file transfer is application that uses stream of QR frames to transfer files between
        phones and from desktop PC to phone (see the Windows and Linux complementary applications for file upload from
        desktop PC).

    </string>
    <string name="textabout2">
    \n
       Advantages \n
        \u2022 Minimal preparations once parameters are tweaked - just point the camera on the QR stream and wait.\n
        \u2022 Fully off-line.\n
        \u2022 It is wireless and does emit little RF noise to the environment, compared to WiFi or BT - so you can do
        wireless file transmission while the phones are in the airplane mode and you do not have infrared port in any of them.

        \n\n
        Disadvantages \n
        \u2022 It is slow, so only reasonable for small files.\n
        \u2022 Does not have any guarantee
        to finish - requires initial tweaking of transmission settings on the producer side
        to get optimal transmission speed while keeping errors/noise below the threshold.\n
        \u2022 Affected by noise such as sun reflexes, low brightness on producer side or inability for
        the camera to focus for prolonged time.\n

    </string>
    <string name="textabout3">
    At the moment, where the QR stream is produced, the screen is brighten up automatically

    </string>
</resources>