<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:background="@color/greyA"
        android:gravity="center"
        android:padding="10dp"
        android:typeface="serif"
        android:text="@string/menu_string_settings" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/textViewfpinfo"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="FPS: " />
            <qrfiles.pwrobel.myapplication.HorizontalNumberPicker
                android:id="@+id/numberPickerFPS"
                android:orientation="horizontal"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#aaaaaa"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/textViewerrinfo"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_err_selection" />
                <qrfiles.pwrobel.myapplication.HorizontalNumberPicker
                    android:id="@+id/numberPickerError"
                    android:orientation="horizontal"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/textViewerrinfo2"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="%" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#aaaaaa"/>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/textViewqrsizeinfo"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_qrsize_selection" />
                <qrfiles.pwrobel.myapplication.HorizontalNumberPicker
                    android:id="@+id/numberPickerQrsize"
                    android:orientation="horizontal"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/textViewqrsizeinfo2"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_qrsize_selection2" />
            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#aaaaaa"/>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/textViewstarttimeinfo"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_start_seq_time" />
                <qrfiles.pwrobel.myapplication.HorizontalNumberPicker
                    android:id="@+id/numberPickerStartSeqTime"
                    android:orientation="horizontal"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/textViewstarttimeinfo2"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="s" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#aaaaaa"/>

    <TextView
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="aa" />
</LinearLayout>

    </ScrollView>


    </LinearLayout>